env/prod/echo-app.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: echo-app

spec:
  replicas: 3

  selector:
    matchLabels:
      app: echo-app

  template:
    metadata:
      labels:
        app: echo-app

    spec:
      containers:
      - name: echo-app

        image: ealen/echo-server

        ports:
        - containerPort: 80
