env/prod/backend-default-deny-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy

metadata:
  name: backend-default-deny-ingress
  namespace: employee-app

spec:
  podSelector:
    matchLabels:
      app: backend

  policyTypes:
    - Ingress
